fpg-api/prod/fpg-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fpg-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fpg-api
  template:
    metadata:
      labels:
        app: fpg-api
    spec:
      containers:
        - name: fpg-api
          image: tobygaskell/fpg:latest
          ports:
            - containerPort: 8000
