fpg-api/prod/fpg-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fpg-api
  namespace: prod
spec:
  selector:
    app: fpg-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: LoadBalancer
