fpg-api/prod/ingress-config-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: fpg-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fpg-api
            port:
              number: 80
